Balls spawn at top of screen and die when they hit they the bottom

--- a/Week9/CMP105App/CMP105App.vcxproj
+++ b/Week9/CMP105App/CMP105App.vcxproj
@@ -159,6 +159,7 @@
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="BeachBallManager.cpp" />
+    <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="Framework\Animation.cpp" />
     <ClCompile Include="Framework\Collision.cpp" />
     <ClCompile Include="Framework\Input.cpp" />
@@ -174,6 +175,7 @@
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="BeachBallManager.h" />
+    <ClInclude Include="EntityManager.h" />
     <ClInclude Include="Framework\Animation.h" />
     <ClInclude Include="Framework\Collision.h" />
     <ClInclude Include="Framework\Input.h" />
